Fix content width on smaller devices

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -112,6 +112,7 @@
     }
     a{
         font-weight: 600;
+        word-wrap: break-word;
     }
 }
 
